BE/error/src/main/java/com/example/demo/schedule/dto/EventType.java
package com.example.demo.schedule.dto;public enum EventType {
}
